# tradingBot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: config.py  kill.py  main.py  orchestrator.py  scheduler.py
app/analytics/: paper_run.py
app/backtest/: historical.py  replay.py  report.py
app/brokers/: angelone.py  base.py  paper.py
app/dashboard/: auth.py  queries.py  routes.py
app/dashboard/templates/: base.html  index.html
app/dashboard/templates/partials/: fills.html  pnl.html  positions.html  regime.html  risk_blocks.html  signals.html  ticker.html
app/data/: bars.py  feed.py  store.py  types.py
app/execution/: engine.py
app/journal/: charges.py  db.py  models.py  types.py
app/llm/: client.py  context.py  eod.py  news.py  pretrade.py  prompts.py  regime.py  schemas.py
app/risk/: limits.py  sizing.py
app/scripts/: auth.py  backtest_orb.py  backtest_sweep.py  eod_report.py  paper_to_live_check.py
app/strategy/: orb.py  universe.py
app/util/: calendar.py
scripts/: deploy.sh  eod_run.sh  morning_start.sh
tests/: conftest.py  test_backtest_replay.py  test_bars.py  test_calendar.py  test_charges.py  test_dashboard.py  test_dashboard_auth.py  test_engine.py  test_engine_llm.py  test_eod_report.py  test_feed.py  test_health.py  test_kill_switch.py  test_limits.py  test_limits_phase6.py  test_llm_news.py  test_llm_pretrade.py  test_llm_schemas.py  test_models.py  test_orb.py  test_paper.py  test_paper_to_live.py  test_sizing.py  test_store.py
