[project]
name = "trading-app"
version = "0.1.0"
description = "Indian intraday ORB trading app with LLM co-pilot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "apscheduler>=3.10",
    "pandas>=2.2",
    "numpy>=2.1",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "httpx>=0.27",
    "smartapi-python>=1.5",
    "pyotp>=2.9",
    # smartapi-python forgets to declare these in its own metadata. Without
    # logzero/websocket-client/six the package fails to import; we sidestep the
    # legacy v1 (autobahn/twisted) modules via a sys.modules stub in
    # app.brokers.angelone, see _stub_legacy_smartapi.
    "logzero>=1.7",
    "websocket-client>=1.8",
    "six>=1.16",
    "google-genai>=1.0",
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["app"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["apscheduler.*", "feedparser.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC"]
